finish mid mod last airbender

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -7,5 +7,6 @@
   <h3>ALLIES: <%= member.allies %></h3>
   <h3>ENEMIES: <%= member.enemies %></h3>
   <h3>AFFILIATION: <%= member.affiliation %></h3>
+  <h4>PHOTO: <img src=<%= member.photo %>>
   <br />
 <% end %>
